# desktop-organizer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/desktop_organizer/: __init__.py  cli.py  organizer.py
tests/: __init__.py  test_cli.py  test_organizer.py
